[Global] Fix cookies banner z-index to be displayed under modals

--- a/src/design/layers.scss
+++ b/src/design/layers.scss
@@ -1,5 +1,7 @@
 // Z-indexes
 
+// Pentila Modals have z-index of 10
+
 // main layers
 $banner-z-index: 10;
 $body-z-index: 0;
@@ -7,11 +9,10 @@ $mobile-menu-z-index: 16;
 $side-menu-z-index: 7;
 $quick-search-z-index: 8;
 $toolbar-z-index: 3;
-$cookies-banner-z-index: 20;
+$cookies-banner-z-index: 10;
 
 // context-menus
 $context-menu-z-index: 10;
 
 // popups
-// $popup-z-index: 1000;
 $popup-z-index: 12;
